Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13589

PFL "lfs setstripe -E 1M -S 65536" incorrectly parses stripe_size units

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.5
    • Lustre 2.12.4, Lustre 2.12.5
    • None
    • 3
    • 9223372036854775807

      Creating a PFL file with "lfs setstripe -E 1M -S 65536 ..." incorrectly transfers the component-end 'M' unit to the stripe_size argument, which results in "65536" being parsed as 65GiB. If the component end is specified as "-E 1G" then the "-S 65536" argument is parsed as 64TiB.

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: